feat!: bump checkstyle, gradle, java, mockito, spotless